// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<H3 /> renders 1`] = `
"<h3 data-css-1wg584y>
  <span>Hello</span>
</h3>"
`;

exports[`<H3 /> renders styles 1`] = `
"<h3 data-css-1qdbaiw>
  <span>Hello</span>
</h3>"
`;
